{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 26,
  "lineage": "921d3d00-e22c-53b0-0d37-665954a60362",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "ql-us-east-2-loadbalancer-logs",
                "enabled": true,
                "prefix": "test-200550-bstest3"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:loadbalancer/app/ecs-test-200550-bstest3/18993b83c76ad106",
            "arn_suffix": "app/ecs-test-200550-bstest3/18993b83c76ad106",
            "dns_name": "ecs-test-200550-bstest3-1252815827.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:259760847234:loadbalancer/app/ecs-test-200550-bstest3/18993b83c76ad106",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-test-200550-bstest3",
            "security_groups": [
              "sg-08bb76aac3c6a5f59"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03dc7fde006535518"
              },
              {
                "subnet_id": "subnet-08aab82c4b582fe3e"
              },
              {
                "subnet_id": "subnet-09040ac2efded095d"
              }
            ],
            "subnets": [
              "subnet-03dc7fde006535518",
              "subnet-08aab82c4b582fe3e",
              "subnet-09040ac2efded095d"
            ],
            "tags": {
              "app-id": "200550",
              "development-team-email": "kevinthinnes@rockcentraldetroit.com",
              "environment": "test",
              "hal-app-id": "200550",
              "iac": "terraform",
              "infrastructure-engineer-email": "kevinthinnes@rockcentraldetroit.com",
              "infrastructure-team-email": "kevinthinnes@rockcentraldetroit.com",
              "module": "aws-ecs-app-tf"
            },
            "vpc_id": "vpc-0b20139ab8e425867",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.load_balancer",
            "data.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:targetgroup/ecs-20210115154813865600000004/d6837767b81bb1c3",
            "arn_suffix": "targetgroup/ecs-20210115154813865600000004/d6837767b81bb1c3",
            "deregistration_delay": 10,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:259760847234:targetgroup/ecs-20210115154813865600000004/d6837767b81bb1c3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-20210115154813865600000004",
            "name_prefix": "ecs-",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 30,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app-id": "200550",
              "development-team-email": "kevinthinnes@rockcentraldetroit.com",
              "environment": "test",
              "hal-app-id": "200550",
              "iac": "terraform",
              "infrastructure-engineer-email": "kevinthinnes@rockcentraldetroit.com",
              "infrastructure-team-email": "kevinthinnes@rockcentraldetroit.com",
              "module": "aws-ecs-app-tf"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0b20139ab8e425867"
          },
          "dependencies": [
            "aws_alb.alb_loadbalancer",
            "aws_security_group.load_balancer",
            "data.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:listener/app/ecs-test-200550-bstest3/18993b83c76ad106/ab4fc3248b9e3cec",
            "certificate_arn": "arn:aws:acm:us-east-2:259760847234:certificate/ca5f2a9d-f452-4cc1-80d7-333ee25bf80f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:targetgroup/ecs-20210115154813865600000004/d6837767b81bb1c3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:259760847234:listener/app/ecs-test-200550-bstest3/18993b83c76ad106/ab4fc3248b9e3cec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:loadbalancer/app/ecs-test-200550-bstest3/18993b83c76ad106",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb_loadbalancer",
            "aws_alb_target_group.ecs",
            "aws_security_group.load_balancer",
            "data.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:listener/app/ecs-test-200550-bstest3/18993b83c76ad106/73678c2fe22016ea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:259760847234:listener/app/ecs-test-200550-bstest3/18993b83c76ad106/73678c2fe22016ea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:loadbalancer/app/ecs-test-200550-bstest3/18993b83c76ad106",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb_loadbalancer",
            "aws_security_group.load_balancer",
            "data.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:259760847234:security-group/sg-029ae6af328b20d45",
            "description": "For ECS containers for application test-200550-bstest3.",
            "egress": [],
            "id": "sg-029ae6af328b20d45",
            "ingress": [],
            "name": "eni-ecs-test-200550-bstest320210115154611405000000001",
            "name_prefix": "eni-ecs-test-200550-bstest3",
            "owner_id": "259760847234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bstest3",
              "app-id": "200550",
              "development-team-email": "kevinthinnes@rockcentraldetroit.com",
              "environment": "test",
              "hal-app-id": "200550",
              "iac": "terraform",
              "infrastructure-engineer-email": "kevinthinnes@rockcentraldetroit.com",
              "infrastructure-team-email": "kevinthinnes@rockcentraldetroit.com",
              "module": "aws-ecs-app-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b20139ab8e425867"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:259760847234:security-group/sg-08bb76aac3c6a5f59",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bb76aac3c6a5f59",
            "ingress": [],
            "name": "alb-ecs-test-200550-bstest320210115154611417900000002",
            "name_prefix": "alb-ecs-test-200550-bstest3",
            "owner_id": "259760847234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bstest3",
              "app-id": "200550",
              "development-team-email": "kevinthinnes@rockcentraldetroit.com",
              "environment": "test",
              "hal-app-id": "200550",
              "iac": "terraform",
              "infrastructure-engineer-email": "kevinthinnes@rockcentraldetroit.com",
              "infrastructure-team-email": "kevinthinnes@rockcentraldetroit.com",
              "module": "aws-ecs-app-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b20139ab8e425867"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_connections_from_cidr_blocks_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "12.165.188.0/24",
              "162.252.136.0/21"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1671598436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bb76aac3c6a5f59",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_connections_from_cidr_blocks_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "12.165.188.0/24",
              "162.252.136.0/21"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-8234016",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bb76aac3c6a5f59",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_connections_from_cidr_blocks_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "12.165.188.0/24",
              "162.252.136.0/21"
            ],
            "description": null,
            "from_port": 8443,
            "id": "sgrule-1116772508",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bb76aac3c6a5f59",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_connections_from_cidr_blocks_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "12.165.188.0/24",
              "162.252.136.0/21"
            ],
            "description": null,
            "from_port": 81,
            "id": "sgrule-2397733872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bb76aac3c6a5f59",
            "self": false,
            "source_security_group_id": null,
            "to_port": 81,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_allow_ingress_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1288287689",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-029ae6af328b20d45",
            "self": false,
            "source_security_group_id": "sg-08bb76aac3c6a5f59",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.default_eni",
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_allow_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-451988869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-029ae6af328b20d45",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.default_eni"
          ]
        }
      ]
    }
  ]
}